2006-11-27  Carlos Garnacho  <carlosg@gnome.org>

	* Init/Services.pm: add some sanity checks.

2006-11-26  Carlos Garnacho  <carlosg@gnome.org>

        * Release 2.0

2006-11-26  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/File.pm (get_base_path): use localstatedir.

2006-11-24  Carlos Garnacho  <carlosg@gnome.org>

	* test-backends: move to test-backends.in
	* test-backends.in: added, make it use the same Net::DBus copy than
	the backends.
	* configure.am: build test-backends
	* Makefile.am: autofoo changes for test-backends.in

2006-11-20  Carlos Garnacho  <carlosg@gnome.org>

	These changes make it work again for RH derivatives, plenty of thanks
	to Joseph E. Sacco  <joseph_sacco@comcast.net> for providing his YDL
	configuration for testing.

	* Network/Ifaces.pm (get_interface_parse_table): do not use custom
	function to get the interfaces list in RH7.2 derivatives.
	* Utils/Parse.pm (expand): recurse properly in replacement arrays
	* Utils/Platform.pm: Fix regexp for a bunch of ditributions, makes me
	wonder about the distribution of whoever has used s-t-b...

2006-11-20  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Platform.pm: added Yellow Dog, it behaves like FC

2006-11-17  Carlos Garnacho  <carlosg@gnome.org>

	* configure.in: expand localstatedir
	* SystemToolsBackends.pl.in, Utils/Backend.pm: use localstatedir
	passed by configure to write pidfile.

2006-11-15  Carlos Garnacho  <carlosg@gnome.org>

	* Shares/NFS.pm (get_share_client_info): Do not reset $rw if it finds
	other NFS share options.

2006-11-15  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Parse.pm (get_from_chatfile):
	* Utils/Replace.pm (set_chat): Fix infinite loop if the chatscript
	contains tabs. Fixes GNOME Bug #343193 (Kris Shannon)

2006-11-15  Carlos Garnacho  <carlosg@gnome.org>

	* Makefile.am: include test-backends in EXTRA_DIST, it's nice to have.

2006-11-15  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm (get_interface_parse_table):