@@ -1,3 +1,8 @@
+2006-12-05  Carlos Garnacho  <carlosg@gnome.org>
+
+	* Network/Ifaces.pm (set_interface_config): do not try to enable 
+	interfaces twice.
+
 2006-11-27  Carlos Garnacho  <carlosg@gnome.org>
 
 	* Init/Services.pm: add some sanity checks.
